--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,7 @@ development:
   encoding: unicode
   database: verdemonarcaonrails_development
   pool: 5
-  password:
+  password:root
   host: localhost
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -48,11 +48,11 @@ test:
   encoding: unicode
   database: verdemonarcaonrails_test
   pool: 5
-  password:
+  password:root
 
 production:
   adapter: postgresql
   encoding: unicode
   database: verdemonarcaonrails_production
   pool: 5
-  password:
+  password:root
